fix bug on safari

--- a/src/pages/Layout/Layout.css
+++ b/src/pages/Layout/Layout.css
@@ -15,8 +15,6 @@ nav {
   left: 50%;
   transform: translate(-50%, 0);
   top: 1vh;
-  content: "";
-
 }
 
 .pp-nav {
